<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devolucion_vehiculo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tvDevolucionPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PLACA"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDevolucionDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Marca - Modelo - Año"
        android:textColor="@color/text_secondary"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ESTADO DE LA RENTA:"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvDevolucionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Cliente: \nDias: \nTotal: "
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnConfirmarDevolucion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_devolucion" />

    <Button
        android:id="@+id/btnCancelarDevolucion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/white" />

</LinearLayout>